--- a/package.json
+++ b/package.json
@@ -7,24 +7,19 @@
     "url": "https://github.com/callemall/material-ui.git"
   },
   "scripts": {
-    "start": "gulp"
+    "start": "webpack-dev-server --config webpack-dev-server.config.js --progress --inline --colors",
+    "build": "webpack --config webpack-production.config.js --progress --colors"
   },
   "private": true,
   "devDependencies": {
     "babel-core": "^6.3.26",
+    "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browser-sync": "^2.11.0",
-    "browserify": "^13.0.0",
-    "gulp": "^3.9.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-util": "^3.0.1",
-    "pretty-hrtime": "^1.0.1",
-    "require-dir": "^0.3.0",
-    "underscore": "^1.8.3",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^3.6.1"
+    "html-webpack-plugin": "^2.24.1",
+    "transfer-webpack-plugin": "^0.1.4",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "material-ui": "^0.16.2",
