--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "^2.3.3",
     "express": "^4.14.0",
     "material-ui": "^0.16.2",
+    "mozunpnp": "^1.0.1",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-iframe": "^0.0.4",
