--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-preset-react": "^6.3.13",
     "html-webpack-plugin": "^2.24.1",
     "transfer-webpack-plugin": "^0.1.4",
-    "webpack": "^1.13.3",
+    "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "express": "^4.14.0",
     "material-ui": "^0.16.2",
     "mozunpnp": "^1.0.1",
+    "npm": "^4.0.3",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-iframe": "^0.0.4",
